force-app/main/default/objects/Card_Product__c/fields/Recipient_of_Init_Cards__c.field-meta.xml
<CustomField>
    <fullName>Recipient_of_Init_Cards__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient of Init Cards</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Card Products (Recipient of Init Cards)</relationshipLabel>
    <relationshipName>Card_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>