force-app/main/default/objects/Card_Product__c/fields/Recipient_of_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Recipient_of_Rewards__c</fullName>
    <label>Recipient of Rewards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardholder</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>