force-app/main/default/objects/Card_Product__c/fields/Ref_Source_Empl__c.field-meta.xml
<CustomField>
    <fullName>Ref_Source_Empl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Contact Employee No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>