force-app/main/default/objects/Card_Product__c/fields/Referred_for_Alternate_Product__c.field-meta.xml
<CustomField>
    <fullName>Referred_for_Alternate_Product__c</fullName>
    <description>Date that the Prospect receives a referral to a small business product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred for Alternate Product</label>
    <type>Date</type>
</CustomField>