force-app/main/default/objects/Card_Product__c/fields/Related_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Related Opportunity Stage</label>
    <type>Text</type>
</CustomField>