force-app/main/default/objects/Card_Product__c/fields/Restrictions_Controls__c.field-meta.xml
<CustomField>
    <fullName>Restrictions_Controls__c</fullName>
    <label>Restrictions/Controls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>MCC</fullName>
            </value>
            <value>
                <fullName>MCC, MCG, &amp; Velocity</fullName>
            </value>
            <value>
                <fullName>MCC &amp; MCG</fullName>
            </value>
            <value>
                <fullName>MCC &amp; Velocity</fullName>
            </value>
            <value>
                <fullName>MCG</fullName>
            </value>
            <value>
                <fullName>MCG &amp; Velocity</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Velocity</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>