force-app/main/default/objects/Card_Product__c/fields/Restrictions_Controls_Notes__c.field-meta.xml
<CustomField>
    <fullName>Restrictions_Controls_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Restrictions Controls Notes</label>
    <type>TextArea</type>
</CustomField>