force-app/main/default/objects/Card_Product__c/fields/Rev_Share_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share_Rewards__c</fullName>
    <label>(*) Rev Share/Rewards</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Card_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Share</fullName>
            </value>
            <value>
                <fullName>Revenue Share &amp; Rewards</fullName>
            </value>
            <value>
                <fullName>Rewards</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Still Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>