force-app/main/default/objects/Card_Product__c/fields/Revshare_Approval_If_Revshare__c.field-meta.xml
<CustomField>
    <fullName>Revshare_Approval_If_Revshare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revshare Approval (If Revshare)</label>
    <type>Checkbox</type>
</CustomField>