force-app/main/default/objects/Card_Product__c/fields/Routed_for_Signatures_Date__c.field-meta.xml
<CustomField>
    <fullName>Routed_for_Signatures_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Routed for Signatures Date</label>
    <type>Date</type>
</CustomField>