force-app/main/default/objects/Card_Product__c/fields/SOS__c.field-meta.xml
<CustomField>
    <fullName>SOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOS</label>
    <type>Checkbox</type>
</CustomField>