force-app/main/default/objects/Card_Product__c/fields/SourceAccountId__c.field-meta.xml
<CustomField>
    <fullName>SourceAccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SourceAccountId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>