force-app/main/default/objects/Card_Product__c/fields/Treasury_Services_Sales__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Services_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Services Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Card_Products5</relationshipName>
    <type>Lookup</type>
</CustomField>