force-app/main/default/objects/Card_Product__c/fields/Use_of_Sub_Levels__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Sub_Levels__c</fullName>
    <label>Sub - Levels</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>