force-app/main/default/objects/Card_Product__c/fields/Virtual_Plus__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Plus__c</fullName>
    <label>Virtual+</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>