force-app/main/default/objects/Card_Product__c/fields/Who_Receives_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Who_Receives_Rewards__c</fullName>
    <label>Who Receives Rewards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
                <default>true</default>
                <label>Company</label>
            </value>
            <value>
                <fullName>Cardholders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>