force-app/main/default/objects/Card_Product__c/validationRules/Declined_by_Credit_Adverse_Action_Letter.validationRule-meta.xml
<ValidationRule>
    <fullName>Declined_by_Credit_Adverse_Action_Letter</fullName>
    <active>true</active>
    <description>Date that the  Adverse action letter is mailed when a Card Product is &quot;Declined&quot; in Salesforce</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Implementation_Stage__c, &quot;Status Red - Credit Approval Unlikely&quot;)), NOT(ISPICKVAL( Implementation_Stage__c ,&quot;Declined by Credit&quot;)),NOT(ISPICKVAL( Implementation_Stage__c, &quot;Withdrawn&quot;)), NOT(ISPICKVAL( Implementation_Stage__c , &quot;Declined for Incompleteness&quot;)), NOT(ISBLANK( Adverse_Action_Letter_Mailed__c )))</errorConditionFormula>
    <errorDisplayField>Adverse_Action_Letter_Mailed__c</errorDisplayField>
    <errorMessage>Only Valid for Process Stage: Status Red - Credit Approval Unlikely, Declined By Credit, Declined for Incompleteness, and Withdrawn</errorMessage>
</ValidationRule>