force-app/main/default/objects/Card_Product__c/validationRules/Other_AP_Software.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_AP_Software</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
ISPICKVAL( AP_Software_Type__c , &quot;Other&quot;), 
ISBLANK( Other_AP_Software__c ) 
)</errorConditionFormula>
    <errorDisplayField>Other_AP_Software__c</errorDisplayField>
    <errorMessage>You must fill in the Other AP Software field if &quot;Other&quot; is chosen for AP Software Type.</errorMessage>
</ValidationRule>